--- a/SF2_News/templates/NewsPortal/post_search.html
+++ b/SF2_News/templates/NewsPortal/post_search.html
@@ -1,39 +1,23 @@
 {% extends 'base.html' %}
 {% load custom_filters %}
 {% load custom_tags %}
-{% block title %}
-  Products
-{% endblock %}
+{% block title %} Search {% endblock %}
 
 {% block content %}
-  <h1>All products</h1>
   <form action="" method="get">
     {{ filterset.form.as_p }}
     <input type="submit" value="search">
   </form>
-
-  {% if products %}
-    <table align="center">
-      <tr>
-        <td>Name</td>
-        <td>Description</td>
-        <td>Category</td>
-        <td>Quantity</td>
-      </tr>
-
-      {% for product in products %}
-        <tr>
-          <td>{{ product.name }}</td>
-          <td>{{ product.description|truncatewords:2  }}</td>
-          <td>{{ product.category.name }}</td>
-          <td>{{ product.quantity }}</td>
-          <td>{{ product.cost|currency:"usd" }}</td>
-        </tr>
-      {% endfor %}
-    </table>
-  {% else %}
-    <h3>Products is empty</h3>
-  {% endif %}
+  {% for post in posts %}
+    <div align="left">
+      <h5>{{ post.title }}</h5>
+      <p>Categories: {% for category in post.category.all %} {{ category.name }} / {% endfor %}</p>
+      <p>{{ post.text|text_filter|truncatewords:20 }}</p>
+      <p>Published on the - {{ post.date_added|date:"d.m.Y" }} </p>
+      <a href="{% url 'news_portal:post_detail' post.id %}"><p>Читать полностью</p></a>
+      <hr>
+    </div>
+  {% endfor %}
 
   {% if page_obj.has_previous %}
       <a href="?{% url_replace page=1 %}">1</a>
@@ -51,6 +35,4 @@
       <a href="?{% url_replace page=page_obj.paginator.num_pages %}">{{ page_obj.paginator.num_pages }}</a>
     {% endif %}
   {% endif %}
-
-
 {% endblock %}
