--- a/SF2_News/templates/base.html
+++ b/SF2_News/templates/base.html
@@ -13,7 +13,7 @@
         <!-- Responsive navbar-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
    <div class="container">
-       <a class="navbar-brand" href="#">SF-Django-3 "NewsPortal"</a>
+       <a class="navbar-brand" href="#">SF-Django-4 "NewsPortal"</a>
        <button class="navbar-toggler" type="button" data-toggle="collapse"
                data-target="#navbarResponsive"
                aria-controls="navbarResponsive" aria-expanded="false"
@@ -30,6 +30,12 @@
                </li>
                <li class="nav-item">
                    <a class="nav-link" href="{% url 'posts:articles_list'%}">All article</a>
+               </li>
+               <li class="nav-item">
+                   <a class="nav-link" href="{% url 'posts:post_create'%}">Add new post</a>
+               </li>
+               <li class="nav-item">
+                   <a class="nav-link" href="{% url 'posts:post_search'%}">Search</a>
                </li>
 
            </ul>
