--- a/SF3/templates/base.html
+++ b/SF3/templates/base.html
@@ -23,7 +23,7 @@
        <div class="collapse navbar-collapse" id="navbarResponsive">
            <ul class="navbar-nav ml-auto">
                <li class="nav-item">
-                   <a class="nav-link" href="/about/">About</a>
+                   <a class="nav-link" href="{% url 'simple_app:product_list' %}">Products</a>
                </li>
                <li class="nav-item">
                    <a class="nav-link" href="/contact/">Contact</a>
